<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_learner">Learning Leaders</string>
    <string name="tab_skill"> Skill IQ Leaders</string>
    <string name="splash_logo">splash_logo</string>

    <string name="score"> Skill IQ Score, </string>
    <string name="hours"> Learning hours, </string>
    <string name="logo">learner logo</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_submit">Project Submission</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="all_fields_required">Please enter all required data</string>
    <string name="invalid_email">Please enter vaild email</string>
    <string name="invalid_link">Please enter vaild Project link</string>
    <string name="close">close</string>
    <string name="are_you_sure">"Are you sure "</string>
    <string name="yes">Yes</string>
    <string name="question_mark">\?</string>
    <string name="submit">Submit</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="oval_Shado">background</string>
    <string name="project_submission">Project Submission</string>
    <string name="sub_success">Submission Successful</string>
    <string name="sub_not_success">Submission not Successful</string>
</resources>